After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 785849 - Entries for GPG & SSH keys are missing if using commit 4c671a7844b0aa9eea1bdbc67d1d7fa8e2451226
Entries for GPG & SSH keys are missing if using commit 4c671a7844b0aa9eea1bdb...
Status: RESOLVED FIXED
Product: seahorse
Classification: Applications
Component: general
3.20.x
Other Linux
: Normal major
: ---
Assigned To: Seahorse Maintainer
Seahorse Maintainer
Depends on:
Blocks:
 
 
Reported: 2017-08-05 05:53 UTC by djfd
Modified: 2017-09-04 22:03 UTC
See Also:
GNOME target: ---
GNOME version: 3.23/3.24


Attachments
Issue details (screenshots, log files) (37.07 KB, application/zip)
2017-08-05 05:53 UTC, djfd
  Details
Add dummy "label"-property setters to conform SeahorsePlace interface (7.26 KB, patch)
2017-09-02 13:53 UTC, Rico Tzschichholz
none Details | Review
Add dummy "label"-property setters to conform SeahorsePlace interface (8.35 KB, patch)
2017-09-02 15:48 UTC, Rico Tzschichholz
committed Details | Review
Screenshot with patch applied (8.29 KB, image/png)
2017-09-04 18:19 UTC, jonathon
  Details

Description djfd 2017-08-05 05:53:48 UTC
Created attachment 356991 [details]
Issue details (screenshots, log files)

Hi guys,

before all did work, just fine, e.g. commit a1474bb0ac692c81e74aa3cdbea0ff7ae3f9cbe9 (not sure, however, what exactly commit in range [a1474bb0ac692c81e74aa3cdbea0ff7ae3f9cbe9, 4c671a7844b0aa9eea1bdbc67d1d7fa8e2451226[ did cause that).

So the issue is that I cannot see any content under 'Secure shell' and 'GPG keys' headers in left pane anymore with that newer version.

This behaviuor change is also accompanied with logging change, newer version produces a lot of errors.

Please attached screenshots and logs.

Thanks!
Comment 1 Rico Tzschichholz 2017-09-02 13:53:09 UTC
Created attachment 358987 [details] [review]
Add dummy "label"-property setters to conform SeahorsePlace interface

GLib-GObject-CRITICAL **: g_object_class_install_property: assertion
	'class->set_property != NULL' failed
GLib-GObject-CRITICAL **: Object class SeahorseGpgmeKeyring doesn't
	implement property 'label' from interface 'SeahorsePlace'

Regression of 7f64db1151ef95cdf2316c5ed34459d3076685d3
Comment 2 Rico Tzschichholz 2017-09-02 15:48:41 UTC
Created attachment 358993 [details] [review]
Add dummy "label"-property setters to conform SeahorsePlace interface

GLib-GObject-CRITICAL **: g_object_class_install_property: assertion
	'class->set_property != NULL' failed
GLib-GObject-CRITICAL **: Object class SeahorseGpgmeKeyring doesn't
	implement property 'label' from interface 'SeahorsePlace'

Regression of 7f64db1151ef95cdf2316c5ed34459d3076685d3
Comment 3 jonathon 2017-09-04 18:19:50 UTC
Created attachment 359097 [details]
Screenshot with patch applied

Patch https://bugzilla.gnome.org/attachment.cgi?id=358993 brings OpenSSH keys back to the interface but GPG keys are still AWOL. :(

https://bugs.archlinux.org/task/54675
Comment 4 Rico Tzschichholz 2017-09-04 22:03:50 UTC
Attachment 358993 [details] pushed as b31e32f - Add dummy "label"-property setters to conform SeahorsePlace interface