Add dummy "label"-property setters to conform SeahorsePlace interface

GLib-GObject-CRITICAL **: g_object_class_install_property: assertion
	'class->set_property != NULL' failed
GLib-GObject-CRITICAL **: Object class SeahorseGpgmeKeyring doesn't
	implement property 'label' from interface 'SeahorsePlace'

Regression of 7f64db1151ef95cdf2316c5ed34459d3076685d3

https://bugzilla.gnome.org/show_bug.cgi?id=785849