pgp/seahorse-gpgme-keyring.c
@@ -806,6 +806,11 @@ seahorse_gpgme_keyring_get_label (SeahorsePlace *place)
 	return g_strdup (_("GnuPG keys"));
 }
 
+static void
+seahorse_gpgme_keyring_set_label (SeahorsePlace *place, const char *label)
+{
+}
+
 static gchar *
 seahorse_gpgme_keyring_get_description (SeahorsePlace *place)
 {
@@ -856,6 +861,24 @@ seahorse_gpgme_keyring_get_property (GObject *obj,
 		break;
 	case PROP_ACTIONS:
 		g_value_take_object (value, seahorse_gpgme_keyring_get_actions (place));
+		break;
+	default:
+		G_OBJECT_WARN_INVALID_PROPERTY_ID (obj, prop_id, pspec);
+		break;
+	}
+}
+
+static void
+seahorse_gpgme_keyring_set_property (GObject *obj,
+                                     guint prop_id,
+                                     const GValue *value,
+                                     GParamSpec *pspec)
+{
+	SeahorsePlace *place = SEAHORSE_PLACE (obj);
+
+	switch (prop_id) {
+	case PROP_LABEL:
+		seahorse_gpgme_keyring_set_label (place, g_value_get_boxed (value));
 		break;
 	default:
 		G_OBJECT_WARN_INVALID_PROPERTY_ID (obj, prop_id, pspec);
@@ -916,6 +939,7 @@ seahorse_gpgme_keyring_class_init (SeahorseGpgmeKeyringClass *klass)
 
 	gobject_class = G_OBJECT_CLASS (klass);
 	gobject_class->get_property = seahorse_gpgme_keyring_get_property;
+	gobject_class->set_property = seahorse_gpgme_keyring_set_property;
 	gobject_class->dispose = seahorse_gpgme_keyring_dispose;
 	gobject_class->finalize = seahorse_gpgme_keyring_finalize;
 
@@ -937,6 +961,7 @@ seahorse_gpgme_keyring_place_iface (SeahorsePlaceIface *iface)
 	iface->get_description = seahorse_gpgme_keyring_get_description;
 	iface->get_icon = seahorse_gpgme_keyring_get_icon;
 	iface->get_label = seahorse_gpgme_keyring_get_label;
+	iface->set_label = seahorse_gpgme_keyring_set_label;
 	iface->get_uri = seahorse_gpgme_keyring_get_uri;
 }
 
